# barcodestoloto

./: Dockerfile  docker-compose.yaml  logger.py  main.py  pyproject.toml  readme.md  services.py
static/: styles.css
templates/: index.html
